# Project-8

./: .gitignore  FDLaplacianND.py  README.md  areaVolume.py  docker_run.sh  grid_search_results.txt  grid_search_results_drm_2d_laplacian.txt  grid_search_results_drm_problem5.txt  grid_search_results_pinn_2d_laplacian.txt  grid_search_results_pinn_2d_wave.txt  grid_search_results_pinn_problem5.txt  hyperparameter_analysis.ipynb  pyproject.toml  random_search_results.txt  random_search_results_drm_2d_laplacian.txt  random_search_results_drm_problem1.txt  random_search_results_drm_problem5.txt  random_search_results_pinn_2d_laplacian.txt  random_search_results_pinn_2d_wave.txt  random_search_results_pinn_problem5.txt  setup.cfg
data_analysis/: error_v_time_results.pkl  numerics_results.py  p1_drm_search_results.txt  p1_pinn_search_results.txt  p2_drm_search_results.txt  p2_pinn_search_results.txt  p3_drm_search_results.txt  p3_pinn_search_results.txt  p6_pinn_search_results.txt  plots.py
delftblue/: install.sh  load.sh  project8.sh  pyamgx.patch  run_install.sh  run_project8.sh
docker/: Dockerfile  pyamgx.patch
grid_search_results/: grid_search_results_pinn_2d_wave.txt
models/: p1_drm_opt.pth  p1_pinn_opt.pth  p2_drm_opt.pth  p2_pinn_opt.pth  p3_drm_opt.pth  p4_drm.pth  p4_drm_opt.pth  p5_pinn_opt.pth  p6_drm_opt.pth  p6_pinn_opt.pth  problem1_pinn.pth  problem2_drm.pth  test.pth
project8/: DRM_2d_poisson.py  PINN.py  PINN_2.py  PINN_2d_poisson.py  PINN_2d_wave.py  __init__.py  __main__.py  classical_testfunctions.py  convenience.py  error data.txt  fd_laplacian_module.py  grid_search.py  model_tests.py  newDeepRitz.py  p4_drm_search_results.txt  (+8 more)
(+54 files in other folders)
