[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project8"
version = "0.0.1"
requires-python = ">=3.11"
dependencies = [
    "cupy-cuda12x[all]>=13.3",
    "matplotlib>=3.9",
    "numpy>=2.0"
]

[project.optional-dependencies]
dev = [
    "Flake8-pyproject",
    "flake8",
    "mypy",
    "pytest"
]
lsp = [
    "pylsp-mypy",
    "pylsp-rope",
    "python-lsp-isort",
    "python-lsp-server[all]"
]

[tool.setuptools]
py-modules = ["project8"]

[tool.flake8]
exclude = ["old"]

[tool.pydocstyle]
# Ignore various documentation-related warnings (for now)
ignore = [
    "D100",
    "D101",
    "D102",
    "D103",
    "D104",
    "D107",
    "D203",
    "D205",
    "D208",
    "D212",
    "D400",
    "D415"
]
